--- a/adminpro/src/app/pages/grafica1/grafica1.component.html
+++ b/adminpro/src/app/pages/grafica1/grafica1.component.html
@@ -1,8 +1,10 @@
 <div class="row">
-  <div class="col-6"><app-dona></app-dona></div>
-  <div class="col-6"><app-dona></app-dona></div>
+  <div class="col-6"><app-dona title="Sales"></app-dona></div>
+  <div class="col-6">
+    <app-dona [labels]="labels1" [data]="data1" title="Products"></app-dona>
+  </div>
 </div>
 <div class="row">
   <div class="col-6"><app-dona></app-dona></div>
-  <div class="col-6"><app-dona></app-dona></div>
+  <div class="col-6"><app-dona title="Costs"></app-dona></div>
 </div>
