--- a/adminpro/src/app/auth/login/login.component.html
+++ b/adminpro/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
 <section>
   <div class="login-box card">
     <div class="card-body">
-      <div id="okta-signin-container"></div>
+      <div id="sign-in-widget"></div>
     </div>
   </div>
 </section>
