--- a/adminpro/src/app/pages/promises/promises.component.html
+++ b/adminpro/src/app/pages/promises/promises.component.html
@@ -1,1 +1,17 @@
 <p>promises works!</p>
+<table class="ui table">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>NAME</th>
+      <th>EMAIL</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let message of messages" id="message-{{ message.id }}">
+      <td>{{ message.id }}</td>
+      <td>{{ message.name }}</td>
+      <td>{{ message.email }}</td>
+    </tr>
+  </tbody>
+</table>
