--- a/adminpro/src/app/pages/pages.component.html
+++ b/adminpro/src/app/pages/pages.component.html
@@ -25,3 +25,4 @@
     <!-- ============================================================== -->
   </div>
 </div>
+<app-image-model></app-image-model>
